spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_impls_of_same_trait_same_type_params_is_error2.snap
---
source: spade-tests/src/integration.rs
---
trait X<T> {}
struct A<#uint I> {}
impl X<bool> for A<1> {}
impl X<bool> for A<1> {}


error: Multiple implementations of X for A<1>
  ┌─ testinput:4:1
  │
3 │ impl X<bool> for A<1> {}
  │ ------------------------ Previous impl here
4 │ impl X<bool> for A<1> {}
  │ ^^^^^^^^^^^^^^^^^^^^^^^^
